feat(import): Add usb detection.